--- a/src/components/ContentSeparator.module.scss
+++ b/src/components/ContentSeparator.module.scss
@@ -1,4 +1,5 @@
 @import '../styles/colors';
+@import '../styles/responsive';
 
 .contentSeparator {
     align-items: center;
@@ -9,7 +10,7 @@
     margin: 0;
     padding: 0;
 
-    @media (max-width: 1440px) {
+    @media (max-width: $mobile-max) {
         margin-left: calc(-2.1rem - env(safe-area-inset-left));
         margin-right: calc(-2.1rem - env(safe-area-inset-right));
     }
