--- a/src/components/License.module.scss
+++ b/src/components/License.module.scss
@@ -1,12 +1,13 @@
 @import '../styles/fonts';
 @import '../styles/colors';
+@import '../styles/responsive';
 
 .license {
     align-items: center;
     display: flex;
     flex-direction: row;
 
-    @media (max-width: 1440px) {
+    @media (max-width: $mobile-max) {
         align-items: flex-start;
         flex-direction: column;
     }
@@ -14,7 +15,7 @@
     .image {
         margin-right: 1.3rem;
 
-        @media (max-width: 1440px) {
+        @media (max-width: $mobile-max) {
             order: 1;
         }
     }
@@ -27,7 +28,7 @@
         line-height: 1.18;
         text-transform: uppercase;
 
-        @media (max-width: 1440px) {
+        @media (max-width: $mobile-max) {
             margin-bottom: 2.1rem;
             order: 0;
         }
