--- a/src/components/Main.module.scss
+++ b/src/components/Main.module.scss
@@ -1,4 +1,5 @@
 @import '../styles/colors';
+@import '../styles/responsive';
 
 .main {
     align-items: stretch;
@@ -16,14 +17,19 @@
         margin-left: calc(5.5rem + 30% + env(safe-area-inset-left));
         margin-right: calc(5.5rem + env(safe-area-inset-right));
         margin-top: 0;
-        min-width: calc(780px - 11rem - env(safe-area-inset-left) - env(safe-area-inset-right));
-        width: calc(70% * 0.618 - 11rem - env(safe-area-inset-left) - env(safe-area-inset-right));
+        max-width: calc(780px);
+        width: calc(0.618 - 11rem - env(safe-area-inset-left) - env(safe-area-inset-right));
 
-        @media (max-width: 1440px) {
+        @media (max-width: $small-screen-max) {
+            max-width: none;
+            width: calc(70% - 11rem - env(safe-area-inset-left) - env(safe-area-inset-right));
+        }
+
+        @media (max-width: $mobile-max) {
             margin-left: calc(2.1rem + env(safe-area-inset-left));
             margin-right: calc(2.1rem + env(safe-area-inset-right));
             margin-top: calc(44px + env(safe-area-inset-top));
-            min-width: auto;
+            max-width: none;
             width: calc(100% - 2.1rem * 2 - env(safe-area-inset-left) - env(safe-area-inset-right));
         }
 
