--- a/src/components/MorePosts.module.scss
+++ b/src/components/MorePosts.module.scss
@@ -1,4 +1,5 @@
 @import '../styles/colors';
+@import '../styles/responsive';
 
 .morePosts {
     align-items: stretch;
@@ -7,7 +8,7 @@
     margin-bottom: 0;
     margin-top: 0;
 
-    @media (max-width: 1440px) {
+    @media (max-width: $mobile-max) {
         flex-direction: column;
     }
 
@@ -20,7 +21,7 @@
         margin-top: 3.4rem;
         min-width: calc(50% - 3.4rem);
 
-        @media (max-width: 1440px) {
+        @media (max-width: $mobile-max) {
             margin: 0;
             margin-bottom: 3.4rem;
             min-width: auto;
