--- a/src/components/NavigationBar.module.scss
+++ b/src/components/NavigationBar.module.scss
@@ -1,5 +1,6 @@
 @import '../styles/fonts';
 @import '../styles/colors';
+@import '../styles/responsive';
 
 .navigationBar {
     color: $color-ui-nav-headline-normal;
@@ -8,7 +9,7 @@
     text-align: right;
     text-transform: uppercase;
 
-    @media (max-width: 1440px) {
+    @media (max-width: $mobile-max) {
         flex-direction: row;
         text-align: left;
     }
@@ -21,7 +22,7 @@
         margin: 0;
         padding: 0;
 
-        @media (max-width: 1440px) {
+        @media (max-width: $mobile-max) {
             align-items: baseline;
             flex-direction: row;
         }
@@ -31,7 +32,7 @@
             flex-direction: row-reverse;
             margin-bottom: 3.4rem;
 
-            @media (max-width: 1440px) {
+            @media (max-width: $mobile-max) {
                 flex-direction: row;
                 margin-bottom: 0;
                 margin-right: 1.3rem;
@@ -65,7 +66,7 @@
                     width: 0.3rem;
                 }
 
-                @media (max-width: 1440px) {
+                @media (max-width: $mobile-max) {
                     font-size: 1.5em;
                     line-height: 1;
                     margin-bottom: 0;
