--- a/src/templates/Post.module.scss
+++ b/src/templates/Post.module.scss
@@ -1,5 +1,6 @@
 @import '../styles/fonts';
 @import '../styles/colors';
+@import '../styles/responsive';
 
 .post {
     align-items: stretch;
@@ -7,7 +8,7 @@
     flex-direction: column;
     margin-top: 5.5rem;
 
-    @media (max-width: 1440px) {
+    @media (max-width: $mobile-max) {
         margin-top: 2.1rem;
     }
 
