--- a/src/templates/Taxonomies.module.scss
+++ b/src/templates/Taxonomies.module.scss
@@ -1,3 +1,5 @@
+@import '../styles/responsive';
+
 @mixin index-item {
     align-items: stretch;
     display: flex;
@@ -9,7 +11,7 @@
 
     margin-top: 5.5rem;
 
-    @media (max-width: 1440px) {
+    @media (max-width: $mobile-max) {
         margin-top: 2.1rem;
     }
 
