--- a/src/components/TableOfContents.module.scss
+++ b/src/components/TableOfContents.module.scss
@@ -53,6 +53,7 @@
       @include horizontal-margin;
 
       align-items: center;
+      justify-content: space-around;
       height: 44px;
       margin-bottom: 0;
     }
@@ -84,6 +85,7 @@
   .body {
     @include container-column;
 
+    flex-grow: 1;
     -ms-overflow-style: none;
     overflow-x: hidden;
     overflow-y: scroll;
@@ -100,6 +102,7 @@
       align-items: stretch;
       display: flex;
       flex-direction: column;
+      flex-grow: 1;
       flex-shrink: 1;
       list-style: none;
       margin: 0;
