--- a/src/components/Heading.module.scss
+++ b/src/components/Heading.module.scss
@@ -14,12 +14,13 @@
   flex-direction: column;
   font-size: 1em;
   margin: 0;
+  margin-top: calc(2.1rem - 3.4rem);
   padding-bottom: 3.4rem;
-  padding-top: 2.1rem;
+  padding-top: 3.4rem;
 
   @media (max-width: $mobile-max) {
-    margin-top: calc(-44px);
-    padding-top: calc(2.1rem + 44px);
+    margin-top: calc(2.1rem - 3.4rem - 44px);
+    padding-top: calc(3.4rem + 44px);
   }
 
   .h1 {
