--- a/src/components/Heading.module.scss
+++ b/src/components/Heading.module.scss
@@ -2,10 +2,19 @@
 @import '../styles/fonts';
 @import '../styles/responsive';
 
-@mixin content {
+@mixin content($margin-top-delta, $margin-bottom-delta) {
   color: $color-content-heading;
   display: block;
   margin: 0;
+  margin-bottom: calc(-3.4rem - #{$margin-bottom-delta});
+  margin-top: calc(-3.4rem - #{$margin-top-delta});
+  padding-bottom: 3.4rem;
+  padding-top: 3.4rem;
+
+  @media (max-width: $mobile-max) {
+    margin-top: calc(-3.4rem - 44px - #{$margin-top-delta});
+    padding-top: calc(3.4rem + 44px);
+  }
 }
 
 .h {
@@ -14,78 +23,61 @@
   flex-direction: column;
   font-size: 1em;
   margin: 0;
-  margin-top: calc(2.1rem - 3.4rem);
-  padding-bottom: 3.4rem;
-  padding-top: 3.4rem;
-
-  @media (max-width: $mobile-max) {
-    margin-top: calc(2.1rem - 3.4rem - 44px);
-    padding-top: calc(3.4rem + 44px);
-  }
+  margin-top: 2.1rem;
+  margin-bottom: 3.4rem;
+  padding: 0;
 
   .h1 {
-    @include content;
+    @include content(0.9rem, 1rem);
 
     font-family: $font-text-sans;
     font-size: 3.2em;
     font-weight: 400;
     line-height: calc(42 / 32);
-    margin-bottom: -1rem;
-    margin-top: -0.9rem;
   }
 
   .h2 {
-    @include content;
+    @include content(1.2rem, 0.9rem);
 
     font-family: $font-text-sans;
     font-size: 2.6em;
     font-weight: 500;
     line-height: calc(37 / 26);
-    margin-bottom: -0.9rem;
-    margin-top: -1.2rem;
   }
 
   .h3 {
-    @include content;
+    @include content(0.9rem, 1rem);
 
     font-family: $font-text-sans;
     font-size: 2.1em;
     font-weight: 600;
     line-height: calc(34 / 21);
-    margin-bottom: -1rem;
-    margin-top: -0.9rem;
   }
 
   .h4 {
-    @include content;
+    @include content(1.2rem, 0.9rem);
 
     font-family: $font-text-sans;
     font-size: 1.9em;
     font-weight: 600;
     line-height: calc(32 / 19);
-    margin-bottom: -0.9rem;
-    margin-top: -1.2rem;
   }
 
   .h5 {
-    @include content;
+    @include content(1.2rem, 0.9rem);
 
     font-family: $font-text-sans;
     font-size: 1.7em;
     font-weight: 700;
     line-height: calc(31 / 17);
-    margin-bottom: -0.9rem;
-    margin-top: -1.2rem;
   }
 
   .h6 {
-    @include content;
+    @include content(1.1rem, 1rem);
 
     font-family: $font-text-sans;
     font-size: 1.5em;
     font-weight: 800;
     line-height: calc(30 / 15);
-    margin-bottom: -1rem;
-    margin-top: -1.1rem;
   }
 }
