--- a/src/templates/Page.module.scss
+++ b/src/templates/Page.module.scss
@@ -33,5 +33,13 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 5.5rem;
+
+    > :first-child {
+      margin-top: 0;
+    }
+
+    > :last-child {
+      margin-bottom: 0;
+    }
   }
 }
