--- a/src/components/TableOfContents.module.scss
+++ b/src/components/TableOfContents.module.scss
@@ -35,7 +35,7 @@
 
   @media (max-width: $mobile-max) {
     background-color: transparent;
-    margin-bottom: calc(2.1rem + env(safe-area-inset-bottom));
+    margin-bottom: calc(env(safe-area-inset-bottom));
     max-width: none;
     padding: 0;
     width: auto;
@@ -86,22 +86,28 @@
   }
 
   .body {
-    @include container-column;
+    @supports (overflow: -moz-scrollbars-none) {
+      overflow:-moz-scrollbars-none;
+    }
 
+    align-items: stretch;
+    display: flex;
+    flex-direction: column;
     flex-grow: 1;
+    flex-shrink: 1;
     -ms-overflow-style: none;
     overflow-x: hidden;
-    overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
-    margin-bottom: 2.1rem;
+    overflow-y: scroll ;
+    margin-bottom: calc(2.1rem - 0.3rem);
     padding-left: 2.1rem;
     padding-right: 2.1rem;
-    padding-top: 1.3rem;
 
     @media (max-width: $mobile-max) {
+      margin: 0;
       padding: 0;
-      padding-bottom: 2.1rem;
-      padding-top: 2.1rem;
+      padding-bottom: calc(2.1rem - 0.3rem);
+      padding-top: calc(2.1rem - 0.5rem);
+      -webkit-overflow-scrolling: touch;
     }
 
     .sectionList {
@@ -120,11 +126,14 @@
       }
 
       .section {
-        @include container-column;
-
+        align-items: stretch;
         counter-increment: ordered-list;
+        display: flex;
+        flex-direction: column;
         flex-shrink: 0;
-        padding: 0;
+        margin: 0;
+        padding-bottom: calc(2.1rem / 2);
+        padding-top: calc(2.1rem / 2);
 
         @media (max-width: $mobile-max) {
           opacity: 0;
@@ -133,40 +142,40 @@
         }
 
         &:first-child {
-          margin-top:  -1.7rem;
+          padding-top: 0.5rem;
         }
 
         &:last-child {
-          margin-bottom: 0;
+          padding-bottom: 0.3rem;
         }
 
         .anchor {
           align-items: baseline;
           display: flex;
           flex-direction: row;
+          font-size: 1.1em;
           justify-content: space-between;
-          line-height: calc(13 / 11);
-          padding-bottom: 1.7rem;
-          padding-top: 1.7rem;
+          line-height: calc(19 / 11);
+          margin-bottom: -0.3rem;
+          margin-top: -0.5rem;
 
           @media (max-width: $mobile-max) {
             @include horizontal-margin;
+
+            font-size: 1.5em;
+            line-height: calc(29 / 15);
+            margin-bottom: -0.9rem;
+            margin-top: -1.2rem;
+            padding-bottom: 1.7rem;
+            padding-top: 1.7rem;
           }
 
           .sectionName {
             font-family: $font-text-sans;
-            font-size: 1.5em;
-            line-height: calc(29 / 15);
-            margin-bottom: -0.9rem;
-            margin-top: -1.2rem;
           }
 
           .sectionIndex {
             font-family: $font-text-monospaced;
-            font-size: 1.5em;
-            line-height: calc(29 / 15);
-            margin-bottom: -0.9rem;
-            margin-top: -1.2rem;
           }
         }
       }
